# GameOfLife

./: .gitignore  GameOfLife.cabal  README.md
src/: GameOfLife.hs  GameOfLifeIO.hs  Main.hs  Tests.hs  Utils.hs
