name:           GameOfLife
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Quentin Duval

executable GameOfLife
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   repa >=3.2.3 && <3.3,
                   repa-algorithms >=3.2.4 && <3.3,
                   mtl >=2.1.2 && <2.2,
                   time >=1.4.0 && <1.5,
                   deepseq >=1.3.0 && <1.4,
                   repa-io >=3.2.3 && <3.3,
                   JuicyPixels >=3.1.5 && <3.2,
                   parallel >=3.2.0 && <3.3,
                   vector >=0.10.0 && <0.11,
                   JuicyPixels-repa >=0.7 && <0.8
  ghc-options:     -O2 -threaded -fvia-C -optc-O3 -rtsopts -fforce-recomp
  extensions:      
                   BangPatterns, 
                   FlexibleContexts, 
                   QuasiQuotes, 
                   TemplateHaskell, 
                   TypeOperators
  other-modules:   
                   GameOfLife,
                   GameOfLifeIO,
                   Tests,
                   Utils

